- Added support to read target names from the `rules.mk` file for the `makei c` command.
- Added a new recipe to support files with the .sqlvar extension.
- support arbitrary long source names even in compile by looking up 
  the mapping to target be derived from the Rules.mk files
- allow multiple targets with same source name in different directories
  even if the immediate parent directory is the same
- allow `.rpgle` and `.sqlrpgle` to build into `PGM` objects
- rename `bob.spec` into `tobi.spec` for RPM spec file
- improve installation instructions to `yum clean metadata` if 
  there is trouble
* Fri Nov 21 2025 Edmund Reinhardt <edmund.reinhardt@ca.ibm.com> - 3.0.0
- Rename RPM to 'tobi' from 'bob' - `yum install tobi`
- change to use -l and --log to avoid conflict with --target
  This allows decomposing of make rule generation vs running 
  gmake in order to debug where any issues are
- Updated all docs to new TOBi name from old BOB name
- Fixed the "*** empty variable name" error in def_rules.mk.
* Fri Nov 14 2025 Edmund Reinhardt <edmund.reinhardt@ca.ibm.com> - 2.4.33
- Improvements to docs
- Support PFSQL as an alternative file extension to TABLE for 
  `CREATE TABLE` SQL source
- Fix ValueError exception during migration
- Now permissively allow building PGMs from RPGLE or SQLRPGLE with the 
  additional `.PGM` in the source name.  I.e. FOO.PGM can now directly 
  by build from `FOO.RPGLE` while in the past it had to be `FOO.PGM.RPGLE`
- add support for SQLALIAS source files to build SQL ALIASes
- enforces requirement for python 3.9 which avoids the error
  "No module named 'ibm_db_dbi'" when the wrong python is used
- now support `-t` prepare build files and output the make command 
  without executing it; trace data is stored in ./.makei-trace.
* Fri Mar 14 2025 Irfan Sharif <IrfanSharif@ibm.com> - 2.4.32
- Add TGTRLS parameter missing from some commands
- Add support for setting DFRWRT and ENHDSP parameter values of CRTDSPF command